[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "printables_downloader"
version = "0.1.0"
description = "Download 3D model files from Printables.com by URL"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
  { name="Praise Obielodan", email="praise.obielodan1@gmail.com" }
]
dependencies = ["requests"]
urls = { Homepage = "https://github.com/probielodan/printables_downloader" }

[project.scripts]
printables-downloader = "printables_downloader.downloader:main"
